# kobuki_gazebo_demo

./: CMakeLists.txt  README.md  package.xml
launch/: kobuki_SYV_office.launch.py  kobuki_empty_world.launch.py  kobuki_obstacle.launch.py
launch/includes/: robot.launch.py
models/: model.config
models/SYV_office_chairs/: model.config  model.sdf
models/SYV_office_chairs/meshes/: chair.dae
models/SYV_office_desks/: model.config  model.sdf
models/SYV_office_desks/meshes/: woodfurn.dae
models/SYV_office_walls/: model.config  model.sdf
models/SYV_office_walls/meshes/: walls.dae
models/kobuki_model/: kobuki.sdf  model.config  model.sdf
models/test_room_object_obstacle_board/: model.config  model.sdf
models/test_room_object_obstacle_board/meshes/: test_room_object_obstacle_board.stl
models/test_room_object_sofa/: model.config  model.sdf
models/test_room_object_sofa/meshes/: test_room_object_sofa.stl
urdf/: kobuki.urdf
worlds/: SYV_office.world  kobuki_demo_empty.world  kobuki_standalone.world  test_room_object_obstacle.world
